5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1585_2905.log
== TEST (2019-03-26 10:54:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
 from math import *
	
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))

s=a+b+c/2

area=sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area,5))

-- ERROR:
File "XXXX", line 4
    from math import *
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:55:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
 
	
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))

s=a+b+c/2

area=sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area,5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    area=sqrt(s*(s-a)*(s-b)*(s-c))
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:57:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
	
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))

s=a+b+c/2

area=sqrt(s*(s-a)*(s-b)*(s-c))

print(round(area,5))

-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:58:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
	
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))

s=a+b+c/2
area=s*(s-a)*(s-b)*(s-c)
area=sqrt(area)

print(round(area,5))

-- OUTPUT:
638.20837
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:01:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
	
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))

s=(a+b+c)/2
area=s*(s-a)*(s-b)*(s-c)
area=sqrt(area)

print(round(area,5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:01:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
	
a = float(input("Digite a: "))
b = float(input("Digite b: "))
c = float(input("Digite c: "))

s=(a+b+c)/2
area=s*(s-a)*(s-b)*(s-c)
area=sqrt(area)

print(round(area,5))

-- EXECUTION TIME:
0.146929
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
